# olio-ohjelmointi

H4/: CMakeLists.txt  car.cpp  car.h  classb.cpp  classb.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H5/: CMakeLists.txt  classa1.h  classa2.h  classb.h  main.cpp
H7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
h1/: main.cpp
h2a/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/: car.cpp  car.h  main.cpp
h3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h6a/: h6a.pro  main.cpp  myclass.cpp  myclass.h
h6b/: exampleclass.cpp  exampleclass.h  main.cpp
